2003-07-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* hyper/dbsym.c (dbtclfetch): Check that the result
	TclObj is not NULL before setting the interp
	result. This avoids a crash when an improperly
	formatted -col option is passed.

2003-06-26  Mo DeJong  <mdejong@users.sourceforge.net>

	Added SN-514-2003-06-26 tag for 5.1.4 release.

2003-05-30  John Lash  <jlash@speakeasy.net>

	* gui/emacs.tcl (sn_ensure_emacs_running):
	Add missing \ at end of line so that
	exec of gnudoit does not fail.

2003-05-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_create_new_project):
	Introduce a short delay between the file
	parse and the invocation of the xref
	process. This lets the symbol browser
	be mapped before any xref files are
	scanned under Win95/98.

2003-05-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/window.tcl (center): Use reqwidth and
	reqheight when calculating window size during
	window centering operation. The previous code
	tried to query the configured width and height
	of the window. This approach was failing under
	Win32 because the default platform window min
	size was being returned in the interval before
	the window was mapped.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (load_xref_pipe): Switch xref
	pipe back to blocking mode before closing
	so that stderr messages are not lost due to
	a nasty Tcl bug.

2003-05-15  John Lash  <jlash@speakeasy.net>

	* gui/tmeter.tcl (sn_loading_message):
	Remove raise call from gui/tmeter.tcl. This eliminates
	a repeated two second pause during the initial
	loading screen. The problem has been seen using both
	gnome and kde desktops and is a bug in the respective
	window managers.

2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/tmeter.tcl (make_scale_window): Add
	a call to sn_wait so that we sit in the
	event loop for a little bit after the scale
	window is mapped. This is needed to work around